<resources>
    <string name="app_name">ZepniZdravnik</string>
    <string name="title_activity_notification_overview">Pregled opomnika</string>

    <string name="labelMedicineName">Ime zdravila:&#160;</string>
    <string name="labelMedicineQuantity">Količina:&#160;</string>
    <string name="labelMedicineTimes">Naslednje opozorilo:&#160;</string>

    <string name="buttonAdd">Dodaj opomnik</string>
    <string name="labelTimeInterval">Interval jemanja:</string>
    <string name="radioDaily">Dnevno</string>
    <string name="radioWeekly">Tedensko</string>
    <string name="labelInterval">Izbira opomnikov:</string>
    <string name="labelColor">Barva opomnika:</string>
    <string name="labelComments">Opombe:</string>
    <string name="buttonDelete">Izbriši</string>
    <string name="buttonSave">Shrani</string>

    <string name="noNotifications1">Seznam opomnikov\nza zdravila je prazen</string>
    <string name="noNotifications2">Seznam opomnikov\nza preglede je prazen</string>
    <string name="noNotifications3">&#62;&#62;Ustvarite opomnik&#60;&#60;</string>
    <string name="notificationSaved">Opomnik je bil uspešno shranjen.</string>
    <string name="notificationNotSaved">Prišlo je do napake, poskusite ponovno.</string>
    <string name="notificationRemovalTitle">Brisanje opomnika</string>
    <string name="notificationRemoveMessage">Ali želite odstraniti ta opomnik?</string>
    <string name="appointmentError">Prišlo je do napake pri nastavitvi opomnika. Prosimo, poskusite znova.</string>
    <string name="notifcationRemoved">Opomnik uspešno odstranjen.</string>
    <string name="notifcationNotRemoved">Prišlo je do napake, poskusite ponovno.</string>
    <string name="notification_doctor_added">Zdravnik je bil dodan med priljubljene.</string>
    <string name="notification_doctor_not_added">Zdravnik ni bil dodan med priljubljene.</string>
    <string name="notification_doctor_removed">Zdravnik je bil odstranjen iz priljubljenih.</string>
    <string name="notification_doctor_not_removed">Zdravnik ni bil odstranjen iz priljubljenih.</string>
    <string name="notification_institution_added">Zdravstveni dom je bil dodan med priljubljene.</string>
    <string name="notification_institution_not_added">Zdravstveni dom ni bil dodan med priljubljene.</string>
    <string name="notification_institution_removed">Zdravstveni dom je bil odstranjen iz priljubljenih.</string>
    <string name="notification_institution_not_removed">Zdravstveni dom ni bil odstranjen iz priljubljenih.</string>
    <string name="notification_not_set">ni nastavljen</string>
    <string name="validationError">Prišlo je do napake pri vnosu podatkov.</string>
    <string name="validationErrorMedicine">Vnesite ime zdravila.</string>
    <string name="validationErrorQuantityEmpty">Vnesite količino zdravila.</string>
    <string name="valiationErrorTimes">Izberite interval jemanja zdravila.</string>
    <string name="validationErrorDoctor">Vnesite ime zdravnika.</string>
    <string name="validationErrorInstitution">Vnesite ime ustanove.</string>
    <string name="validationErrorLocation">Vnesite lokacijo.</string>
    <string name="validationErrorDisplayAlarm">Nastavite čas.</string>
    <string name="validationErrorDisplayAppointment">Nastavite čas.</string>
    <string name="validationErrorAlarmTime">Čas alarma je v preteklosti.</string>
    <string name="validationErrorAppointTime">Čas pregleda je v preteklosti.</string>


    <string name="day1">Ponedeljek</string>
    <string name="day2">Torek</string>
    <string name="day3">Sreda</string>
    <string name="day4">Četrtek</string>
    <string name="day5">Petek</string>
    <string name="day6">Sobota</string>
    <string name="day7">Nedelja</string>

    <string name="hour0">00:00</string>
    <string name="hour1">01:00</string>
    <string name="hour2">02:00</string>
    <string name="hour3">03:00</string>
    <string name="hour4">04:00</string>
    <string name="hour5">05:00</string>
    <string name="hour6">06:00</string>
    <string name="hour7">07:00</string>
    <string name="hour8">08:00</string>
    <string name="hour9">09:00</string>
    <string name="hour10">10:00</string>
    <string name="hour11">11:00</string>
    <string name="hour12">12:00</string>
    <string name="hour13">13:00</string>
    <string name="hour14">14:00</string>
    <string name="hour15">15:00</string>
    <string name="hour16">16:00</string>
    <string name="hour17">17:00</string>
    <string name="hour18">18:00</string>
    <string name="hour19">19:00</string>
    <string name="hour20">20:00</string>
    <string name="hour21">21:00</string>
    <string name="hour22">22:00</string>
    <string name="hour23">23:00</string>

    <string name="labelTimeOfAppointment">Čas pregleda:&#160;</string>
    <string name="labelLocOfAppointment">Kje:&#160;</string>
    <string name="labelDocOfAppointment">Pri zdravniku:&#160;</string>
    <string name="labelDoctor">Zdravnik:</string>
    <string name="labelInstitution">Ustanova:</string>
    <string name="labelLocation">Naslov:</string>
    <string name="title_activity_appointment_overviev">Pregled opomnika</string>

    <string name="timePickerTitle1">Datum in čas opomnika</string>
    <string name="timePickerTitle2">Datum in čas pregleda</string>

    <string name="labelAlarmTime">Čas opomnika:</string>
    <string name="setTimeText">Nastavi čas</string>
    <string name="labelAppointTime">Čas pregleda:</string>

    <string name="labelRemove">Samodejno odstrani pretekel opomnik:</string>

    <string name="yes">DA</string>
    <string name="no">NE</string>
    <string name="set">Nastavi</string>
    <string name="delete">Izbriši</string>
    <string name="cancel">Prekliči</string>
    <string name="labelWhatSearch">Išči:</string>
    <string name="radioDomovi">Zdravstveni dom</string>
    <string name="radioZdravniki">Zdravnik</string>
    <string name="labelImeDoma">Ime doma:</string>
    <string name="labelPostaDoma">Pošta:</string>
    <string name="labelKrajDoma">Kraj:</string>
    <string name="labelImeZdravnika">Ime:</string>
    <string name="labelPriimekZdravnika">Priimek:</string>
    <string name="search">Išči</string>
    <string name="labelMail">Mail:</string>
    <string name="labelTel">Telefon:</string>
    <string name="labelPosta">Pošta:</string>
    <string name="labelNaslov">Naslov:</string>
    <string name="noresults">Nobenih zadetkov</string>
    <string name="error_network">Prosimo, preverite internetno povezavo in poskusite znova.</string>
</resources>
