<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/notificationDisplay"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/listitembackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:textColor="@android:color/black"
            android:text="@string/labelLocOfAppointment"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/locOfAppointment"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:textColor="@android:color/black"
            android:text="@string/labelDocOfAppointment"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/docOfAppointment"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@android:color/black"
            android:text="@string/labelTimeOfAppointment"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/timeOfAppointment"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>